cros: Accessibility icon was invisible in shelf during OOBE

Bug: 881214
Change-Id: I21675325deaf351bf2431935652c8bb2247bdb32
Reviewed-on: https://chromium-review.googlesource.com/1217352
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590381}