ash/system/tray_accessibility.h
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "ash/accessibility/accessibility_delegate.h"
 #include "ash/accessibility/accessibility_observer.h"
+#include "ash/session/session_observer.h"
 #include "ash/system/tray/tray_detailed_view.h"
 #include "ash/system/tray/tray_image_item.h"
 #include "base/macros.h"
@@ -103,7 +104,9 @@ class ASH_EXPORT AccessibilityDetailedView : public TrayDetailedView {
 
 }  // namespace tray
 
-class TrayAccessibility : public TrayImageItem, public AccessibilityObserver {
+class TrayAccessibility : public TrayImageItem,
+                          public AccessibilityObserver,
+                          public SessionObserver {
  public:
   explicit TrayAccessibility(SystemTray* system_tray);
   ~TrayAccessibility() override;
@@ -127,6 +130,9 @@ class TrayAccessibility : public TrayImageItem, public AccessibilityObserver {
   // Overridden from AccessibilityObserver.
   void OnAccessibilityStatusChanged() override;
 
+  // Overridden from SessionObserver:
+  void OnSessionStateChanged(session_manager::SessionState state) override;
+
   views::View* default_;
   tray::AccessibilityDetailedView* detailed_menu_;
 
@@ -135,6 +141,8 @@ class TrayAccessibility : public TrayImageItem, public AccessibilityObserver {
 
   // A11y feature status on just entering the lock screen.
   bool show_a11y_menu_on_lock_screen_;
+
+  ScopedSessionObserver session_observer_{this};
 
   const std::unique_ptr<DetailedViewDelegate> detailed_view_delegate_;
 
